--- a/src/main/webapp/TemplateGradeContractuel.xhtml
+++ b/src/main/webapp/TemplateGradeContractuel.xhtml
@@ -22,21 +22,31 @@ and open the template in the editor.
 
             <p:dialog widgetVar="dlg" header=" Enregistrer un nouveau Grade pour les contractuels" hideEffect="explode" showEffect="explode" modal="true">
                 <h:form id="formAjouter" enctype="multipart/form-data" >
-                     <p:panelGrid id="panelAjouter" columns="2">
+                    <h:panelGrid id="panelAjouter" columns="2" cellspacing="5">
                                 <p:outputLabel value="Intitulé du Grade:" for="intitule" />
                                 <p:inputText id="intitule" value="#{gradeContractBean.gradeContract.intituleGradeContract}" title="Intitule" required="true"/>
+                                <h:outputText value="Age de départ à la retraite: " />  
+                                <p:selectOneMenu value="#{gradeContractBean.gradeContract.retraite}" effect="fold" editable="true" required="true">  
+                                    <f:selectItem itemLabel="Selectionner un age" itemValue="" />  
+                                    <f:selectItems var="age" value="#{gradeContractBean.ages()}" itemLabelEscaped="true"/> 
+                                </p:selectOneMenu>  
                                
-                    </p:panelGrid>
+                    </h:panelGrid>
                     <p:commandButton value="Enregistrer" action="#{gradeContractBean.createGradeContract()}"  oncomplete="PF('dlg').hide()" update=":tableForm:table"/>
                 </h:form>
             </p:dialog>
             <p:dialog widgetVar="dl" header=" Modifier un Grade pour les contractuels" hideEffect="fold" showEffect="explode" resizable="true" modal="true">
                 <h:form id="formModifier" enctype="multipart/form-data">                
-                    <p:panelGrid columns="2" id="panelGModifier">
+                    <h:panelGrid columns="2" id="panelGModifier" cellspacing="5">
                                 <p:outputLabel value="Intitulé du Grade:" for="intitule" />
                                 <p:inputText id="intitule" value="#{gradeContractBean.gradeContract.intituleGradeContract}" title="Intitule" required="true" />
+                                <h:outputText value="Age de départ à la retraite: " />  
+                                <p:selectOneMenu value="#{gradeContractBean.gradeContract.retraite}" effect="fold" editable="true" required="true">  
+                                    <f:selectItem itemLabel="Selectionner un age" itemValue="" />  
+                                    <f:selectItems var="age" value="#{gradeContractBean.ages()}" itemLabelEscaped="true"/> 
+                                </p:selectOneMenu>  
                                 <h:inputHidden id="number" value="#{gradeContractBean.gradeContract.id}" />
-                    </p:panelGrid>
+                    </h:panelGrid>
                     <p:commandButton value="Modifier" action="#{gradeContractBean.updateGradeContract()}"  oncomplete="PF('dl').hide()" update=":tableForm:table" />
                 </h:form>
             </p:dialog> 
@@ -58,6 +68,12 @@ and open the template in the editor.
                             <h:outputText value="Intitulé des grades pour les contractuels"/>
                         </f:facet>
                         <h:outputText value="#{item.intituleGradeContract}"/>
+                    </p:column>
+                    <p:column>
+                        <f:facet name="header">
+                            <h:outputText value="Age de départ à la retraite "/>
+                        </f:facet>
+                        <h:outputText value="#{item.retraite}"/>
                     </p:column>
 
                 </p:dataTable>
