--- a/src/main/webapp/TemplateFonctionnairesRetraites.xhtml
+++ b/src/main/webapp/TemplateFonctionnairesRetraites.xhtml
@@ -48,6 +48,9 @@ and open the template in the editor.
                                 <f:selectItem itemLabel="Spécialité" itemValue="specialite"/>
                                 <f:selectItem itemLabel="Date d'entrée en fonction publique" itemValue="dateentreefoncpub"/>
                                 <f:selectItem itemLabel="Date de départ en retraite" itemValue="dateretraite"/>
+                                <f:selectItem itemLabel="Numéro de téléphone" itemValue="numtel"/>
+                                <f:selectItem itemLabel="Date de délivrance de la CNI" itemValue="datecni"/>
+                                <f:selectItem itemLabel="Lieu de délivrance de la CNI" itemValue="lieucni"/>
                             </p:selectManyCheckbox>
                             <p:selectBooleanCheckbox id="selectall" value="#{fonctionnaireBean.selectAll}" itemLabel="Tout cocher">  
                                 <p:ajax update="infoToDisplayS1, infoToDisplayS2" listener="#{fonctionnaireBean.selectAllMethod}"/>  
@@ -188,23 +191,37 @@ and open the template in the editor.
                     <p:menuitem value="Profil" actionListener="#{fonctionnaireBean.beforeDisplayProfil()}" update=":formProfil" oncomplete="PF('dlgp').show()"/>
                 </p:contextMenu> 
 
-                <p:dataTable value="#{fonctionnaireBean.findFonctionnaireRetraites()}" var="item" paginator="true" rows="10" paginatorTemplate=" {CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown} " resizableColumns="true" liveResize="true" id="table" scrollable="true" rowsPerPageTemplate="10,15" selectionMode="single" selection="#{fonctionnaireBean.fonctionnaire}" rowKey="#{item.id}">
+                <p:dataTable value="#{fonctionnaireBean.findFonctionnaireRetraites()}" var="item" paginator="true" rows="10" paginatorTemplate=" {CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown} " resizableColumns="true" liveResize="true" id="table" scrollable="true" draggableColumns="true" rowsPerPageTemplate="10,15" selectionMode="single" selection="#{fonctionnaireBean.fonctionnaire}" rowKey="#{item.id}">
                     <f:facet name="header">
                         La liste des fonctionnaires retraités
                     </f:facet>
 
-                    <p:column rendered="#{fonctionnaireBean.boolMat}" filterBy="#{item.matricule}" width="120">
+                    <p:column rendered="#{fonctionnaireBean.boolMat}" filterBy="#{item.matricule}" width="150">
                         <f:facet name="header">
                             <h:outputText value="Matricule"/>
                         </f:facet>
                         <h:outputText value="#{item.matricule}"/>
                     </p:column>
 
-                    <p:column rendered="#{fonctionnaireBean.boolCni}" filterBy="#{item.cni}" width="100">
+                    <p:column rendered="#{fonctionnaireBean.boolCni}" filterBy="#{item.cni}" width="150">
                         <f:facet name="header">
                             <h:outputText value="Numéro CNI"/>
                         </f:facet>
                         <h:outputText value="#{item.cni}"/>
+                    </p:column>
+
+                    <p:column rendered="#{fonctionnaireBean.boolLieuCni}" filterBy="#{item.lieuDelivranceCni}" width="150">
+                        <f:facet name="header">
+                            <h:outputText value="Lieu délivrance CNI"/>
+                        </f:facet>
+                        <h:outputText value="#{item.lieuDelivranceCni}"/>
+                    </p:column>
+
+                    <p:column rendered="#{fonctionnaireBean.boolDateCni}" filterBy="#{fonctionnaireBean.currentDateCni(item)}" width="150">
+                        <f:facet name="header">
+                            <h:outputText value="Date délivrance CNI"/>
+                        </f:facet>
+                        <h:outputText value="#{fonctionnaireBean.currentDateCni(item)}"/>
                     </p:column>
 
                     <p:column rendered="#{fonctionnaireBean.boolNom}" filterBy="#{item.nom}" width="150">
@@ -228,14 +245,14 @@ and open the template in the editor.
                         <h:outputText value="#{item.nomJeuneFille}"/>
                     </p:column>
 
-                    <p:column rendered="#{fonctionnaireBean.boolDateNaiss}" width="140">
+                    <p:column rendered="#{fonctionnaireBean.boolDateNaiss}" width="150">
                         <f:facet name="header">
                             <h:outputText value="Date naissance"/>
                         </f:facet>
                         <h:outputText value="#{fonctionnaireBean.currentDateNaissance(item)}"/>
                     </p:column>
 
-                    <p:column rendered="#{fonctionnaireBean.boolLieuNaiss}" filterBy="#{item.lieuNaissance}" width="100">
+                    <p:column rendered="#{fonctionnaireBean.boolLieuNaiss}" filterBy="#{item.lieuNaissance}" width="150">
                         <f:facet name="header">
                             <h:outputText value="Lieu Naissance"/>
                         </f:facet>
@@ -263,7 +280,7 @@ and open the template in the editor.
                         <h:outputText value="#{item.arrondNaissance}"/>
                     </p:column>
 
-                    <p:column rendered="#{fonctionnaireBean.boolSexe}" filterBy="#{item.sexe}" width="80">
+                    <p:column rendered="#{fonctionnaireBean.boolSexe}" filterBy="#{item.sexe}" width="150">
                         <f:facet name="header">
                             <h:outputText value="Sexe"/>
                         </f:facet>
@@ -311,7 +328,7 @@ and open the template in the editor.
                         </f:facet>
                         <h:outputText value="#{fonctionnaireBean.currentDateEntreeFonctionPub(item)}"/>
                     </p:column>
-                    <p:column rendered="#{fonctionnaireBean.boolDateRetraite}" width="140">
+                    <p:column rendered="#{fonctionnaireBean.boolDateRetraite}" width="150">
                         <f:facet name="header">
                             <h:outputText value="Date retraite"/>
                         </f:facet>
